UI DESIGN #2 -  .temp alignment fix - .weather class alignment fix

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -20,6 +20,9 @@ body {
 
 main {
   min-height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.2),
