--- a/src/sass/_weather.scss
+++ b/src/sass/_weather.scss
@@ -18,6 +18,7 @@
     color: #fff;
     font-size: 48px;
     font-weight: 700;
+    text-align: center;
     text-shadow: 3px 3px rgba(50, 50, 70, 0.5s);
   }
 }
